exports[`test renders disabled tags 1`] = `
<section className="background--light-secondary hard">
<Meta title="Group Finder" description="Who are your people? We know it's important to be connected, but it's hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?" image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg" />
<div className="soft-half soft-double-ends soft-double-sides@palm-wide push-double@lap-and-up soft-double@lap-wide-and-up text-center">
<h3 className="flush-bottom">
Find My People
</h3>
<h6 className="soft-half-bottom@handheld soft-bottom@anchored">
<em>
Select multiple tags to find even more groups
</em>
</h6>
<div className="push-ends soft-double-sides@lap-and-up push-double-sides@anchored">
<withRouter(Connect(TagWithoutData)) className="" onClick={[Function]} val="test" />
<withRouter(Connect(TagWithoutData)) className="" onClick={[Function]} val="test" />
</div>
<button disabled={true} onClick={[Function]} className="btn push-top@lap-and-up btn--disabled">
Let&#39;s Go!
</button>
</div>
<div className="soft soft-double-ends soft-double@lap-and-up text-center background--light-primary">
<div>
<h3 className="soft-ends@anchored push-top@lap-and-up flush-bottom">
Don&#39;t see what you&#39;re looking for?
</h3>
<Form classes={{...}} submit={[Function]} action={true}>
<Input hideLabel={true} classes={{...}} placeholder="Type your search here..." type="text" name="search" onChange={[Function]} />
<div className="one-whole text-center@handheld text-left@lap-and-up">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
<div className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
<h3 className="push-top">
You Can&#39;t Do Life Alone
</h3>
<div className="grid">
<div className="grid__item one-whole one-half@palm-wide-and-up">
<FeedItem item={{...}} />
</div>
<div className="grid__item one-whole one-half@palm-wide-and-up">
<FeedItem item={{...}} />
</div>
</div>
</div>
</section>
`;

exports[`test renders loading if no tags 1`] = `
<section className="background--light-secondary hard">
<Meta title="Group Finder" description="Who are your people? We know it's important to be connected, but it's hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?" image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg" />
<div className="soft-half soft-double-ends soft-double-sides@palm-wide push-double@lap-and-up soft-double@lap-wide-and-up text-center">
<h3 className="flush-bottom">
Find My People
</h3>
<h6 className="soft-half-bottom@handheld soft-bottom@anchored">
<em>
Select multiple tags to find even more groups
</em>
</h6>
<div className="push-ends soft-double-sides@lap-and-up push-double-sides@anchored" />
<div className="one-whole text-center">
<Loading />
</div>
</div>
<div className="soft soft-double-ends soft-double@lap-and-up text-center background--light-primary">
<div>
<h3 className="soft-ends@anchored push-top@lap-and-up flush-bottom">
Don&#39;t see what you&#39;re looking for?
</h3>
<Form classes={{...}} submit={[Function]} action={true}>
<Input hideLabel={true} classes={{...}} placeholder="Type your search here..." type="text" name="search" onChange={[Function]} />
<div className="one-whole text-center@handheld text-left@lap-and-up">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
<div className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
<h3 className="push-top">
You Can&#39;t Do Life Alone
</h3>
<div className="grid">
<div className="grid__item one-whole one-half@palm-wide-and-up">
<FeedItem item={{...}} />
</div>
<div className="grid__item one-whole one-half@palm-wide-and-up">
<FeedItem item={{...}} />
</div>
</div>
</div>
</section>
`;

exports[`test renders with props 1`] = `
<section className="background--light-secondary hard">
<Meta title="Group Finder" description="Who are your people? We know it's important to be connected, but it's hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?" image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg" />
<div className="soft-half soft-double-ends soft-double-sides@palm-wide push-double@lap-and-up soft-double@lap-wide-and-up text-center">
<h3 className="flush-bottom">
Find My People
</h3>
<h6 className="soft-half-bottom@handheld soft-bottom@anchored">
<em>
Select multiple tags to find even more groups
</em>
</h6>
<div className="push-ends soft-double-sides@lap-and-up push-double-sides@anchored">
<withRouter(Connect(TagWithoutData)) className="" onClick={[Function]} val="test" />
<withRouter(Connect(TagWithoutData)) className="" onClick={[Function]} val="test" />
</div>
<button disabled={false} onClick={[Function]} className="btn push-top@lap-and-up">
Let&#39;s Go!
</button>
</div>
<div className="soft soft-double-ends soft-double@lap-and-up text-center background--light-primary">
<div>
<h3 className="soft-ends@anchored push-top@lap-and-up flush-bottom">
Don&#39;t see what you&#39;re looking for?
</h3>
<Form classes={{...}} submit={[Function]} action={true}>
<Input hideLabel={true} classes={{...}} placeholder="Type your search here..." type="text" name="search" onChange={[Function]} />
<div className="one-whole text-center@handheld text-left@lap-and-up">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
<div className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
<h3 className="push-top">
You Can&#39;t Do Life Alone
</h3>
<div className="grid">
<div className="grid__item one-whole one-half@palm-wide-and-up">
<FeedItem item={{...}} />
</div>
<div className="grid__item one-whole one-half@palm-wide-and-up">
<FeedItem item={{...}} />
</div>
</div>
</div>
</section>
`;
